--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -28,16 +28,48 @@ jobs:
             
             echo "=== Installing Kubernetes ==="
             
+            # 1. 기본 패키지
             sudo apt-get update
-            sudo apt-get install -y curl gnupg2 software-properties-common
+            sudo apt-get install -y ca-certificates curl
             
-            # Kubernetes 리포지토리 추가 (더 안정적인 방법)
-            curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
-            echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.29/deb/ /' | sudo tee /etc/apt/sources.list.d/kubernetes.list
+            # 2. Kubernetes 리포지토리 추가
+            sudo install -m 0755 -d /etc/apt/keyrings
+            sudo curl -fsSLo /etc/apt/keyrings/kubernetes-archive-keyring.gpg https://dl.k8s.io/apt/doc/apt-key.gpg
+            echo "deb [signed-by=/etc/apt/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee /etc/apt/sources.list.d/kubernetes.list
             
+            # 3. K8s 설치
             sudo apt-get update
-            sudo apt-get install -y kubelet kubeadm kubectl containerd
+            sudo DEBIAN_FRONTEND=noninteractive apt-get install -y kubelet kubeadm kubectl containerd
             sudo apt-mark hold kubelet kubeadm kubectl
+            
+            # 4. containerd 설정
+            echo "=== Configuring containerd ==="
+            sudo mkdir -p /etc/containerd
+            sudo containerd config default | sudo tee /etc/containerd/config.toml > /dev/null
+            sudo systemctl restart containerd
+            
+            # 5. 커널 모듈 로드
+            echo "=== Loading kernel modules ==="
+            sudo modprobe br_netfilter
+            sudo modprobe overlay
+            
+            # 6. sysctl 설정
+            echo "=== Configuring sysctl ==="
+            sudo tee /etc/sysctl.d/99-kubernetes-cri.conf > /dev/null <<EOF
+            net.bridge.bridge-nf-call-iptables  = 1
+            net.bridge.bridge-nf-call-ip6tables = 1
+            net.ipv4.ip_forward                 = 1
+            EOF
+            sudo sysctl --system
+            
+            # 7. kubelet 시작
+            echo "=== Starting kubelet ==="
+            sudo systemctl enable kubelet
+            sudo systemctl start kubelet
+            
+            # 8. containerd 상태 확인
+            echo "=== Verifying containerd ==="
+            sudo systemctl status containerd
             
             echo "=== Initializing K8s cluster ==="
             sudo kubeadm init --pod-network-cidr=10.244.0.0/16
