Clean Kubernetes installation

--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [ master ]
     paths:
-      - '.github/workflows/bootstrap.yml'
+      - '.github/workflows/*.yml'
 
 jobs:
   setup:
