Fix GPG dearmor issue in SSH environment

--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -31,12 +31,13 @@ jobs:
             echo "=== Installing Kubernetes v1.29 ==="
             
             sudo apt-get update
-            sudo apt-get install -y ca-certificates curl gpg
+            sudo apt-get install -y ca-certificates curl
             
-            # 최신 공식 K8s 리포지토리
+            # GPG 키 다운로드 (gpg --dearmor 우회)
             sudo mkdir -p /etc/apt/keyrings
-            curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
-            echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.29/deb/ /' | sudo tee /etc/apt/sources.list.d/kubernetes.list
+            sudo sh -c 'curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key > /tmp/k8s.key && cat /tmp/k8s.key | gpg --dearmor > /etc/apt/keyrings/kubernetes-apt-keyring.gpg'
+            
+            echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.29/deb/ /' | sudo tee /etc/apt/sources.list.d/kubernetes.list > /dev/null
             
             sudo apt-get update
             sudo DEBIAN_FRONTEND=noninteractive apt-get install -y kubelet kubeadm kubectl containerd
