--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -73,11 +73,26 @@ jobs:
             #!/bin/bash
             set -e
             
-            export KUBECONFIG=/etc/kubernetes/admin.conf
-            
             echo "=== Installing ArgoCD ==="
             
+            # KUBECONFIG 권한 수정
+            sudo chmod 644 /etc/kubernetes/admin.conf
+            
+            export KUBECONFIG=/etc/kubernetes/admin.conf
+            
+            # K8s 클러스터 상태 확인
+            kubectl get nodes
+            
+            # ArgoCD 네임스페이스 생성
             kubectl create namespace argocd --dry-run=client -o yaml | kubectl apply -f -
+            
+            # ArgoCD 설치
             kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+            
+            # 설치 완료 대기
+            sleep 10
+            
+            # ArgoCD 상태 확인
+            kubectl get pods -n argocd
             
             echo "=== ArgoCD installation complete ==="
