--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -30,10 +30,16 @@ jobs:
             
             echo "=== Installing Kubernetes v1.29 ==="
             
+            # 이미 설치되어 있으면 스킵
+            if command -v kubeadm &> /dev/null && sudo kubeadm version &> /dev/null; then
+              echo "Kubernetes already installed, skipping installation"
+              exit 0
+            fi
+            
             sudo apt-get update
             sudo apt-get install -y ca-certificates curl
             
-            # GPG 키 다운로드 (gpg --dearmor 우회)
+            # GPG 키 다운로드
             sudo mkdir -p /etc/apt/keyrings
             sudo sh -c 'curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key > /tmp/k8s.key && cat /tmp/k8s.key | gpg --dearmor > /etc/apt/keyrings/kubernetes-apt-keyring.gpg'
             
@@ -75,16 +81,17 @@ jobs:
             
             echo "=== Installing ArgoCD ==="
             
-            # KUBECONFIG 권한 수정
+            export KUBECONFIG=/etc/kubernetes/admin.conf
             sudo chmod 644 /etc/kubernetes/admin.conf
             
-            export KUBECONFIG=/etc/kubernetes/admin.conf
-            
-            # K8s 클러스터 상태 확인
-            kubectl get nodes
+            # ArgoCD 네임스페이스가 이미 존재하는지 확인
+            if kubectl get namespace argocd &> /dev/null; then
+              echo "ArgoCD already installed, skipping installation"
+              exit 0
+            fi
             
             # ArgoCD 네임스페이스 생성
-            kubectl create namespace argocd --dry-run=client -o yaml | kubectl apply -f -
+            kubectl create namespace argocd
             
             # ArgoCD 설치
             kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
